# pls

./: .gitignore  .pylintrc  LICENSE  README.md  demo.tape  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
pls/: __init__.py  cli.py  config.py  context.py  executor.py  prompt.py  safety.py
pls/providers/: __init__.py  anthropic.py  custom.py  lmstudio.py  ollama.py  openai.py
