[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pls-sh"
version = "0.1.1"
description = "Terminal in natural language. Just say what you want."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "salvy9978" },
]
keywords = ["cli", "terminal", "natural-language", "llm", "ollama", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]

[project.scripts]
pls = "pls.cli:main"

[project.urls]
Homepage = "https://github.com/salvy9978/pls"
Repository = "https://github.com/salvy9978/pls"
Issues = "https://github.com/salvy9978/pls/issues"

[tool.hatch.build.targets.wheel]
packages = ["pls"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
